tr(cleanup): remove part of old test-toolkit dead code